# TGRenderLab

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  RenderLab.sln  vcpkg.json
GraphicCore/: CMakeLists.txt
GraphicCore/Include/: ConstString.hpp  Log.h  Singleton.hpp
GraphicCore/Include/Editor/: MainWindow.h  Window.h
GraphicCore/Include/Graphics/: Core.hpp  D3D11Details.hpp  DeviceContext.hpp  Factory.hpp  GraphicsBase.hpp  PipelineState.hpp
GraphicCore/Include/Graphics/Direct3D11/: FormatMap.hpp
GraphicCore/Include/Graphics/OpenGL/: DeviceContextGL.hpp  FactoryGL.hpp  GLContextInfo.hpp  GLCreateInfo.hpp
GraphicCore/Include/Input/: Event.h  EventDispatcher.h  EventHandler.h  KeyCode.h
GraphicCore/Include/Math/: Assignment.hpp  Block.hpp  Color.hpp  Constants.hpp  Core.hpp  Dot.hpp  Matrix.hpp  MatrixBase.hpp  Product.hpp  Quaternion.hpp  Redux.hpp  Transpose.hpp
GraphicCore/Include/Math/Implementation/: Quaternion.inl
GraphicCore/Include/PAL/: DebugNew.h  Input.h  Window.h
GraphicCore/Include/PAL/Windows/: Auxiliary.h  NativeWindow.h  Win32API.h  Win32Exception.h
GraphicCore/Include/RHI/: SwapChain.hpp
GraphicCore/Include/RHI/Direct3D11/: RenderDeviceD3D11.hpp  SwapChainD3D11.hpp
GraphicCore/Include/RHI/OpenGL/: RenderDeviceGL.hpp
GraphicCore/Include/Reflection/: Field.hpp  FieldList.hpp  TypeList.hpp
GraphicCore/Source/: Chronometer.cpp
GraphicCore/Source/Editor/: MainWindow.cpp
GraphicCore/Source/Graphics/Direct3D11/: RenderDeviceD3D11.cpp
GraphicCore/Source/Input/: Keyboard.cpp
GraphicCore/Source/PAL/Windows/: Window.cpp
GraphicCore/Source/RHI/: D3D11Details.cpp
GraphicCore/Source/RHI/Direct3D11/: DeviceContextD3D11.cpp  SwapChainD3D11.cpp
GraphicCore/Source/RHI/OpenGL/: glad_implementation.cpp
RenderCore/: CMakeLists.txt
RenderCore/Include/: Chronometer.h  ConstString.hpp  MemoryLeakDetect.h  Singleton.hpp  Utility.h  Win32Lean.h
RenderCore/Include/Diagnostics/: BaseException.h  Log.hpp  Win32Exception.h
RenderCore/Include/Editor/: MainWindow.h  PopupWindow.h  Window.h  WindowHelper.h
RenderCore/Include/Exception/: BaseException.h
RenderCore/Include/Graphics/: Factory.hpp  GraphicsBase.hpp  RenderDevice.hpp  SwapChain.hpp
RenderCore/Include/Graphics/Direct3D11/: CreateInfoD3D11.hpp  DeviceContextD3D11.hpp  FactoryD3D11.hpp
RenderCore/Include/Graphics/OpenGL/: FactoryGL.hpp  GLContextInfo.hpp  RenderDeviceGL.hpp  SwapChainGL.hpp
RenderCore/Include/Input/: Event.h  EventData.h  EventDispatcher.h  KeyCode.h  Keyboard.h  Manager.hpp  Mouse.h
RenderCore/Include/Math/: Assignment.hpp  AssignmentOp.hpp  Block.hpp  CWiseBinaryOp.hpp  Color.hpp  Common.hpp  Constants.hpp  Core.hpp  CwiseBinaryOp.hpp  Dot.hpp  ForwardDeclarations.hpp  Matrix.hpp  MatrixBase.hpp  Multiple.hpp  Product.hpp  Quaternion.hpp  Redux.hpp  Storage.hpp  TemplateUtil.hpp  Transpose.hpp  XprHelper.hpp
RenderCore/Include/Math/Implementation/: Quaternion.inl
RenderCore/Include/PAL/: DebugNew.h  Diagnostics.h  Editor.h  InputEnums.h  KeyCode.h  NativeWindow.h  Window.h
RenderCore/Include/PAL/Windows/: Auxiliary.h  MemoryLeakDetection.h  NativeWindow.h  Utility.h  Win32Exception.h  Win32Lean.h  WinAPIException.h  WinAPILean.h  WindowCore.h  WindowHelper.h
RenderCore/Include/Reflection/: Attribute.hpp  AttributeList.hpp  ElementList.hpp  Field.hpp  FieldList.hpp  Method.hpp  NameValuePair.hpp  Property.hpp  Specifier.hpp  StaticReflection.hpp  TypeList.hpp
RenderCore/Source/: Chronometer.cpp  Utility.cpp
RenderCore/Source/Diagnostics/: BaseException.cpp  Win32Exception.cpp
RenderCore/Source/Editor/: MainWindow.cpp  PopupWindow.cpp  Window.cpp  WindowHelper.cpp
RenderCore/Source/Exception/: BaseException.cpp
RenderCore/Source/Graphics/: D3D11Details.cpp
RenderCore/Source/Input/: Event.cpp  EventDispatcher.cpp  Keyboard.cpp  Mouse.cpp
RenderCore/Source/Math/: Color.cpp
RenderCore/Source/PAL/: NativeWindow.cpp
RenderCore/Source/PAL/Windows/: Window.cpp  (+7 more)
RenderCore/include/: Chronometer.hpp  MemoryLeakDetect.hpp  PlatformHeaders.h  Singleton.hpp  Utility.hpp  Win32Lean.h
RenderCore/include/Diagnostics/: BaseException.hpp  Debug.hpp  Log.hpp  Win32Exception.hpp  WinAPIException.hpp
RenderCore/include/Graphics/: Core.hpp  D3D11Details.hpp  Factory.hpp  GraphicsBase.hpp  SwapChain.hpp
RenderCore/include/Input/: Device.hpp  DeviceFactory.hpp  Dispatcher.hpp  Event.hpp  EventData.hpp  InputEvent.hpp  InputSystem.hpp  KeyCode.hpp  Keyboard.hpp  Manager.hpp  Mouse.hpp
RenderCore/include/Math/: Common.hpp  Core.hpp  CwiseBinaryOp.hpp  Dot.hpp  Matrix.hpp  NumTraits.hpp  Quaternion.hpp  Simd.hpp  Storage.hpp  TemplateUtil.hpp
RenderCore/include/Reflection/: AttrList.hpp  Attribute.hpp  ElemList.hpp  Field.hpp  FieldList.hpp  NameValuePair.hpp  NamedValue.hpp  StaticReflection.hpp
RenderCore/include/Template/: CString.hpp  ConstexprString.hpp  Singleton.hpp
RenderCore/include/Window/: MainWindow.hpp  PopupWindow.hpp  Window.hpp  WindowRegister.hpp
RenderCore/include/glad/: gl.h
RenderCore/src/: Chronometer.cpp  Utility.cpp
RenderCore/src/Diagnostics/: BaseException.cpp  Win32Exception.cpp  WinAPIException.cpp
RenderCore/src/Graphics/: D3D11Details.cpp
RenderCore/src/Input/: Dispatcher.cpp  Event.cpp  InputEvent.cpp  InputSystem.cpp  Keyboard.cpp  Manager.cpp  Mouse.cpp
RenderCore/src/Math/: Color.cpp
RenderCore/src/Window/: MainWindow.cpp  PopupWindow.cpp  Window.cpp  WindowHelper.cpp  WindowRegister.cpp
TGRenderer/: CMakeLists.txt  RCe34440  TGRenderer.aps  TGRenderer.rc  TGRenderer.vcxproj  TGRenderer.vcxproj.filters  resource.h
TGRenderer/include/: Application.h  Application.hpp  GraphicsLayer.hpp  Renderer.hpp  UnitTest.h  UnitTest.hpp  resource.h
TGRenderer/src/: Application.cpp  Renderer.cpp  UnitTest.cpp  WinMain.cpp  main.cpp
Tests/Math/: CMakeLists.txt  GraphicsLayer.hpp  UnitTest.cpp  UnitTest.h  main.cpp
Tests/Reflection/: CMakeLists.txt  ClangASTTest.hpp  CommandLineTest.h  CommandLineTest.hpp  TemplateTest.hpp  main.cpp
Tests/Template/: CMakeLists.txt  ExpressionTemplate.hpp  main.cpp
(+205 files in other folders)
